--- a/index.html
+++ b/index.html
@@ -313,6 +313,22 @@
               <a href="#form">Request a Quote</a></li>
           </ul>
         </div>
+        <div class="footermenu3">
+          <ul>
+            <li>
+              <a href="#">Home</a></li>
+            <li>
+              <a href="#about">About</a></li>
+            <li>
+              <a href="#services">Services</a></li>
+            <li>
+              <a href="#testimonies">Client Reviews</a></li>
+            <li>
+              <a href="#contact">Contact </a></li>
+            <li>
+              <a href="#form">Request a Quote</a></li>
+          </ul>
+        </div>
         <div class="footerimglogo">
           <img src="./assets/imglogo.png" alt="" draggable="false">
         </div>
