--- a/index.html
+++ b/index.html
@@ -265,6 +265,7 @@
           <img src="./assets/license.png" alt="" draggable="false">
         </div>
         <div class="contactcontainer" id="contact">
+          <img src="./assets/Union2.png" alt="" draggable="false">
           <div class="contact">
             <div class="contactinfo">
               <img src="./assets/Frame345.png" alt="" draggable="false">
