responsivity form and footer

--- a/index.html
+++ b/index.html
@@ -340,6 +340,9 @@
             <br>
             (330) 357-1958
           </p>
+          <div class="footerimglogo2">
+            <img src="./assets/imglogo.png" alt="" draggable="false">
+          </div>
         </div>
         <div class="footersocials">
           <p>Follow Us</p>
