1st poster change and responsivity

--- a/index.html
+++ b/index.html
@@ -82,7 +82,15 @@
     </header>
     <main>
         <div class="postercontainer">
-          <img src="./assets/6thavenue-landing-background 3.jpg" alt="" draggable="false">
+          <img class="bgposter" style="display:block;"  src="./assets/6thavenue-landing-background-min.gif" alt="" draggable="false">
+            <div class="infostexts">
+              <img class="posterimglogo" src="./assets/Frame29.png" alt="" draggable="false">
+            <h3>Make your life <span style="font-weight:bold;text-decoration:underline#ffbe50;">easier</span> with one less thing to worry about <span style="color:#ffbe50;">.</span></h3>
+            <p>The best cleaning for your business spaces and homes. <span style="font-weight: bold;">Make all places cleaner, healthier and happier.</span> </p>
+            </div>
+        <div class="vetor1">
+          <img src="./assets/Vector19.png" alt="" draggable="false">
+        </div>
         </div>
         <div class="missioncontainer" id="about">
           <div class="mission">
