--- a/index.html
+++ b/index.html
@@ -273,7 +273,9 @@
           <img src="./assets/license.png" alt="" draggable="false">
         </div>
         <div class="contactcontainer" id="contact">
-          <img src="./assets/Union2.png" alt="" draggable="false">
+          <img class="contactbgimg-m" src="./assets/Union3.png" alt="" draggable="false">
+
+          <img class="contactbgimg" src="./assets/Union2.png" alt="" draggable="false">
           <div class="contact">
             <div class="contactinfo">
               <img src="./assets/Frame345.png" alt="" draggable="false">
