--- a/index.html
+++ b/index.html
@@ -81,15 +81,15 @@
             <p>Our mission is to provide a clean and safe environment to all off our customers in a timely manner (we can do it fast accordingly to your needs) and with a fair and best price through our assessment process.</p>
           </div>
           <div class="missiongrid">
-            <div class="missioncard" id="missioncard1">
+            <div class="missioncard show" id="missioncard1">
               <img src="./assets/mission1.jpg" alt="" draggable="false">
               <h5>Maintaining the cleanliness standards of your common areas and offices</h5>
             </div>
-            <div class="missioncard" id="missioncard2">
+            <div class="missioncard show" id="missioncard2">
               <img src="./assets/mission2.png" alt="" draggable="false">
               <h5>Bring our team attention to detail, excellence in house cleaning, care and love to your residence.</h5>
             </div>
-            <div class="missioncard" id="missioncard3">
+            <div class="missioncard show" id="missioncard3">
               <img src="./assets/mission3.png" alt="" draggable="false">
               <h5>We strive to provide quality and best price.</h5>
             </div>
