--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
           <img class="bgposter" style="display:block;"  src="./assets/6thavenue-landing-background-min.gif" alt="" draggable="false">
             <div class="infostexts">
               <img class="posterimglogo" src="./assets/Frame29.png" alt="" draggable="false">
-            <h3>Make your life <span style="font-weight:bold;text-decoration:underline#ffbe50;">easier</span> with one less thing to worry about <span style="color:#ffbe50;">.</span></h3>
+            <h3>Make your life <span style="font-weight:bold;">easier</span> with one less thing to worry about <span style="color:#ffbe50;">.</span></h3>
             <p>The best cleaning for your business spaces and homes. <span style="font-weight: bold;">Make all places cleaner, healthier and happier.</span> </p>
             </div>
         <div class="vetor1">
@@ -78,7 +78,7 @@
             <h3>The Best Clean Guaranteed</h3>
             <p>Our mission is to provide a clean and safe environment to all off our customers in a timely manner (we can do it fast accordingly to your needs) and with a fair and best price through our assessment process.</p>
           </div>
-          <div class="missiongrid">
+          <div class="missiongrid reveal">
             <div class="missioncard show" id="missioncard1">
               <img src="./assets/mission1.jpg" alt="" draggable="false">
               <h5>Maintaining the cleanliness standards of your common areas and offices</h5>
@@ -102,7 +102,7 @@
                 <h2>Our Services</h2>
                 <p>Here at <span style="font-weight: bold;">6th Avenue</span> we want to provide the highest service through the best cleaning for your business espaces and homes. <span style="font-weight: bold;">Make all places cleaner, healthier and happier.</span> </p>
             </div>
-            <div class="servicesgrid">
+            <div class="servicesgrid reveal">
                 <div class="servicescard" id="servicecard1">
                   <img src="./assets/services1.jpg" alt="" draggable="false">
                   <h2>Post Construction Cleaning</h2>
