constructor link add .

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                   </clipPath>
                   </defs>
                   </svg>
-                <a href="www.maxwconstruction.com" target="_blank" rel="noopener noreferrer"><span style="font-weight:bold;">Click here</span> if you need the best contractor in town for Remodeling and Construction.                  
+                <a href="https://maxwconstruction.com/" target="_blank"><span style="font-weight:bold;">Click here</span> if you need the best contractor in town for <span style="font-weight:bold;"> Remodeling and Construction</span>.                  
               </a>
             </div>
           </div>
