--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                   </div>
                   <div class="menusocial">
                     <ul>
-                      <li><a href="#" target="_blank">Get in touch</a></li>
+                      <li><a href="#request">Get in touch</a></li>
       
                       <li><a href="#" target="_blank"><svg width="31" height="32" viewBox="0 0 31 32" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <g clip-path="url(#clip0_78_44)">
@@ -56,7 +56,7 @@
                   </div>
                 </div>
           <div class="imglogo-m">
-            <img src="./assets/Camada_1.png" alt="" draggable="false">
+           <a href="#home"><img src="./assets/Camada_1.png" alt="" draggable="false"></a>
           </div>
             </nav>
         </div>
@@ -94,7 +94,7 @@
           </div>
         </div>
         <div class="request">
-          <a href="#" target="_blank">Request a Quote</a>
+          <a href="#request">Request a Quote</a>
         </div>
         <div class="servicescontainer" id="services">
           <div class="services">
@@ -279,14 +279,14 @@
             <div class="contactinfo">
               <img src="./assets/Frame345.png" alt="" draggable="false">
             </div>
-            <div class="form">
+            <div class="form" >
               <div class="contacttitle">
-                <h2>Request a Quote</h2>
+                <h2 id="request">Request a Quote</h2>
                 <svg width="288" height="2" viewBox="0 0 288 2" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path d="M0.589111 1C0.589111 0.447715 1.03683 0 1.58911 0H286.411C286.963 0 287.411 0.447715 287.411 1C287.411 1.55228 286.963 2 286.411 2H1.5891C1.03682 2 0.589111 1.55228 0.589111 1Z" fill="#FFBE50"/>
                 </svg>
               </div>
-              <form action="https://formsubmit.co/" method="POST" id="form">
+              <form action="https://formsubmit.co/Contact@6thavecleaning.com" method="POST" id="form">
                   <div class="formgroup1"><input type="text" required placeholder="Name" autocomplete="on" name="nome" id="name">
                   <input type="tel" required autocomplete="on" name="tel" id="tel" placeholder="Phone" pattern=""></div>
     
@@ -323,22 +323,6 @@
               <a href="#contact">Request a Quote</a></li>
           </ul>
         </div>
-<!--        <div class="footermenu3">
-          <ul>
-            <li>
-              <a href="#">Home</a></li>
-            <li>
-              <a href="#about">About</a></li>
-            <li>
-              <a href="#services">Services</a></li>
-            <li>
-              <a href="#testimonies">Client Reviews</a></li>
-            <li>
-              <a href="#contact">Contact </a></li>
-            <li>
-              <a href="#form">Request a Quote</a></li>
-          </ul>
-        </div> -->
         <div class="footerimglogo">
           <img src="./assets/imglogo.png" alt="" draggable="false">
         </div>
@@ -358,7 +342,8 @@
               <path d="M26.3858 24.4863L27.2317 18.9955H21.9635V15.4338C21.9635 13.935 22.698 12.4658 25.0576 12.4658H27.4543V7.79117C27.4543 7.79117 25.2802 7.42017 23.2026 7.42017C18.8619 7.42017 16.0274 10.0469 16.0274 14.8106V18.9955H11.2043V24.4863H16.0274V37.9909H21.9635V24.4863H26.3858Z" fill="white"/>
               </svg>
               </a></li>
-            <li><a href=""><svg xmlns="http://www.w3.org/2000/svg" width="54" height="54" viewBox="8 8 54 54" fill="none">
+            <li><a href="">
+              <svg xmlns="http://www.w3.org/2000/svg" width="54" height="54" viewBox="8 8 54 54" fill="none">
               <path d="M26.992 7.36353C21.6593 7.36353 20.99 7.38684 18.8955 7.48216C16.8051 7.57789 15.3783 7.90884 14.1298 8.39443C12.8383 8.89598 11.7428 9.56689 10.6514 10.6588C9.55914 11.7502 8.88825 12.8458 8.38508 14.1368C7.89828 15.3858 7.56693 16.8131 7.47284 18.9028C7.37916 20.9973 7.35461 21.667 7.35461 26.9999C7.35461 32.3328 7.37834 33 7.47325 35.0946C7.56938 37.185 7.90033 38.6119 8.38549 39.8605C8.88743 41.152 9.55832 42.2475 10.6502 43.339C11.7412 44.4313 12.8367 45.1038 14.1273 45.6053C15.3766 46.0909 16.8039 46.4219 18.8939 46.5176C20.9884 46.6129 21.6572 46.6362 26.9896 46.6362C32.3227 46.6362 32.9899 46.6129 35.0844 46.5176C37.1748 46.4219 38.6033 46.0909 39.8526 45.6053C41.1437 45.1038 42.2376 44.4313 43.3286 43.339C44.4208 42.2475 45.0917 41.152 45.5949 39.8609C46.0776 38.6119 46.4089 37.1846 46.5071 35.095C46.6012 33.0004 46.6257 32.3328 46.6257 26.9999C46.6257 21.667 46.6012 20.9977 46.5071 18.9032C46.4089 16.8127 46.0776 15.3858 45.5949 14.1373C45.0917 12.8458 44.4208 11.7502 43.3286 10.6588C42.2363 9.56648 41.1441 8.89557 39.8514 8.39443C38.5996 7.90884 37.1719 7.57789 35.0815 7.48216C32.9871 7.38684 32.3203 7.36353 26.9859 7.36353H26.992ZM25.2305 10.9022C25.7533 10.9013 26.3367 10.9022 26.992 10.9022C32.2348 10.9022 32.8562 10.921 34.9265 11.0151C36.841 11.1026 37.88 11.4225 38.5722 11.6913C39.4885 12.0472 40.1418 12.4727 40.8287 13.1599C41.5159 13.8472 41.9414 14.5018 42.2981 15.4181C42.5669 16.1095 42.8872 17.1486 42.9743 19.0631C43.0684 21.1331 43.0888 21.7549 43.0888 26.9954C43.0888 32.2358 43.0684 32.8577 42.9743 34.9277C42.8868 36.8422 42.5669 37.8813 42.2981 38.5727C41.9422 39.489 41.5159 40.1415 40.8287 40.8284C40.1414 41.5157 39.489 41.9411 38.5722 42.297C37.8809 42.567 36.841 42.8861 34.9265 42.9737C32.8566 43.0677 32.2348 43.0882 26.992 43.0882C21.7489 43.0882 21.1275 43.0677 19.0575 42.9737C17.143 42.8853 16.104 42.5654 15.4114 42.2966C14.4951 41.9407 13.8406 41.5153 13.1533 40.828C12.466 40.1407 12.0406 39.4878 11.6839 38.571C11.4151 37.8797 11.0948 36.8406 11.0077 34.926C10.9136 32.856 10.8948 32.2342 10.8948 26.9905C10.8948 21.7468 10.9136 21.1282 11.0077 19.0582C11.0952 17.1437 11.4151 16.1046 11.6839 15.4124C12.0398 14.496 12.466 13.8415 13.1533 13.1542C13.8406 12.4669 14.4951 12.0415 15.4114 11.6848C16.1036 11.4148 17.143 11.0957 19.0575 11.0077C20.8689 10.9259 21.5709 10.9013 25.2305 10.8973V10.9022ZM37.4734 14.1626C36.1726 14.1626 35.1171 15.2168 35.1171 16.5182C35.1171 17.8191 36.1726 18.8745 37.4734 18.8745C38.7743 18.8745 39.8297 17.8191 39.8297 16.5182C39.8297 15.2173 38.7743 14.1618 37.4734 14.1618V14.1626ZM26.992 16.9158C21.4232 16.9158 16.9082 21.4309 16.9082 26.9999C16.9082 32.5688 21.4232 37.0819 26.992 37.0819C32.5608 37.0819 37.0742 32.5688 37.0742 26.9999C37.0742 21.4309 32.5604 16.9158 26.9916 16.9158H26.992ZM26.992 20.4544C30.6066 20.4544 33.5373 23.3848 33.5373 26.9999C33.5373 30.6146 30.6066 33.5453 26.992 33.5453C23.377 33.5453 20.4468 30.6146 20.4468 26.9999C20.4468 23.3848 23.377 20.4544 26.992 20.4544Z" fill="#002A68"/>
             </svg></a></li>
           </ul>
