--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
         </div>
         <div class="diferences">
           <img src="./assets/Union.png" alt="" draggable="false">
-          <div class="diferencesgrid">
+          <div class="diferencesgrid reveal">
             <div class="diferencecard">
               <svg xmlns="http://www.w3.org/2000/svg" width="171" height="168" viewBox="0 0 171 168" fill="none">
                 <g clip-path="url(#clip0_12_3400)">
@@ -207,7 +207,7 @@
             <h3>What Our Clients Say</h3>
             <p>Take care of your needs the best way possible with the intention of build a <span style="font-weight:bold;">lasting and trustworthy relationship.</span> </p>
           </div>
-          <div class="testemoniesgrid">
+          <div class="testemoniesgrid reveal">
             <div class="testemonycard" id="testemonycard1">
               <h2>Anna S.</h2>
               <h6>Cleveland, OH</h6>
@@ -257,7 +257,7 @@
               Just trust and we’ll deliver as promised. <span style="font-weight:bold;">Your place is our purpose!</span> 
               Choose <span style="font-weight:bold;">6th Ave Cleaning,</span> Then Relax.</p>
           </div>
-          <div class="preferencegrid">
+          <div class="preferencegrid reveal">
             <div class="preferencecard" id="preferencecard1">
               <img src="./assets/preference1.png" alt="" draggable="false">
               <h5>Cost-efficiency and consistent results</h5>
