responsive poster mod

--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
             <h3>The Best Clean Guaranteed</h3>
             <p>Our mission is to provide a clean and safe environment to all of our customers in a timely manner (we can do it fast accordingly to your needs) and with a fair and best price through our assessment process.</p>
           </div>
+          <div class="missionborder"></div>
           <div class="missiongrid reveal">
             <div class="missioncard show" id="missioncard1">
               <img src="./assets/mission1.jpg" alt="" draggable="false">
