--- a/index.html
+++ b/index.html
@@ -25,9 +25,7 @@
                     <span class="bar"></span>
                 </a>
                 <div class="menu-links">
-              <div class="nonebar">
-                
-              </div>
+              <div class="nonebar"></div>
                   <div class="menu-linksbtn">
                     <ul>
                       <li><a href="#"> Home </a></li>
@@ -85,15 +83,15 @@
           </div>
           <div class="missionborder"></div>
           <div class="missiongrid reveal">
-            <div class="missioncard show" id="missioncard1">
+            <div class="missioncard show reveal" id="missioncard1">
               <img src="./assets/mission1.jpg" alt="" draggable="false">
               <h5>Maintaining the cleanliness standards of your common areas and offices</h5>
             </div>
-            <div class="missioncard show" id="missioncard2">
+            <div class="missioncard show reveal" id="missioncard2">
               <img src="./assets/mission2.png" alt="" draggable="false">
               <h5>Bringing our team attention to detail, excellence in house cleaning, care and love to your residence or business spaces.</h5>
             </div>
-            <div class="missioncard show" id="missioncard3">
+            <div class="missioncard show reveal" id="missioncard3">
               <img src="./assets/mission3.png" alt="" draggable="false">
               <h5>We strive to provide quality and best price.</h5>
             </div>
@@ -106,22 +104,22 @@
           <div class="services">
             <div class="servicestitle">
                 <h2>Our Services</h2>
-                <p>Here at <span style="font-weight: bold;">6th Avenue</span> we want to provide the <span style="font-weight: bold;">highest</span> service through the best cleaning for your business <span style="font-weight: bold;">espaces</span> and homes. <span style="font-weight: bold;">Make all places cleaner, healthier and happier.</span> </p>
+                <p>Here at <span style="font-weight: bold;">6th Avenue</span> we want to provide the <span style="font-weight: bold;">highest</span> service through the best cleaning for your business <span style="font-weight: bold;">spaces</span> and homes. <span style="font-weight: bold;">Make all places cleaner, healthier and happier.</span> </p>
             </div>
-            <div class="servicesgrid reveal">
-                <div class="servicescard" id="servicecard1">
+            <div class="servicesgrid">
+                <div class="servicescard reveal" id="servicecard1">
                   <img src="./assets/services1.jpg" alt="" draggable="false">
                   <h2>Post Construction Cleaning</h2>
                 </div>
-                <div class="servicescard" id="servicecard2">
+                <div class="servicescard reveal" id="servicecard2">
                   <img src="./assets/services2.jpg" alt="" draggable="false">
                   <h2>Move in  / Out Cleaning</h2>
                 </div>
-                <div class="servicescard" id="servicecard3">
+                <div class="servicescard reveal" id="servicecard3">
                   <img src="./assets/services3.jpg" alt="" draggable="false">
                   <h2>Office & <br> Commercial Cleaning</h2>
                 </div>
-                <div class="servicescard" id="servicecard4">
+                <div class="servicescard reveal" id="servicecard4">
                   <img src="./assets/services4.jpg" alt="" draggable="false">
                   <h2>Residential Cleaning</h2>
                 </div>
@@ -209,8 +207,8 @@
             <h3>What Our Clients Say</h3>
             <p>Take care of your needs the best way possible with the intention of build a <span style="font-weight:bold;">lasting and trustworthy relationship.</span> </p>
           </div>
-          <div class="testemoniesgrid reveal">
-            <div class="testemonycard" id="testemonycard1">
+          <div class="testemoniesgrid">
+            <div class="testemonycard reveal" id="testemonycard1">
               <h2>Anna S.</h2>
               <h6>Cleveland, OH</h6>
               <svg width="167" height="27" viewBox="0 0 167 27" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -223,7 +221,7 @@
               <p>I am absolutely amazed of the cleaning service that were provided! The cleaners were very sweet and attentive. My apartment smells wonderful! I hope to have the same two cleaners for each cleaning!
                 Highly recommend them!"</p>
             </div>
-            <div class="testemonycard" id="testemonycard2">
+            <div class="testemonycard reveal" id="testemonycard2">
               <h2>Heather K.</h2>
               <h6>Cleveland, OH</h6>
               <svg width="167" height="27" viewBox="0 0 167 27" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -235,7 +233,7 @@
               </svg>
               <p>6th Ave has been a rockstar for us! Our new building required a lot of extra help and they are always willing to help make sure we look good for our internal and external partners!</p>
             </div>
-            <div class="testemonycard" id="testemonycard3">
+            <div class="testemonycard reveal" id="testemonycard3">
               <h2>Carly U.</h2>
               <h6>Kent, OH</h6>
               <svg width="167" height="27" viewBox="0 0 167 27" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -259,16 +257,16 @@
               Just trust and we’ll deliver as promised. <span style="font-weight:bold;">Your place is our purpose!</span> 
               Choose <span style="font-weight:bold;">6th Ave Cleaning,</span> Then Relax.</p>
           </div>
-          <div class="preferencegrid reveal">
-            <div class="preferencecard" id="preferencecard1">
+          <div class="preferencegrid">
+            <div class="preferencecard reveal" id="preferencecard1">
               <img src="./assets/preference1.png" alt="" draggable="false">
               <h5>Cost-efficiency and consistent results</h5>
             </div>
-            <div class="preferencecard" id="preferencecard2">
+            <div class="preferencecard reveal" id="preferencecard2">
               <img src="./assets/preference2.png" alt="" draggable="false">
               <h5>Cleaners are constantly trained and appreciated for high standard performance</h5>
             </div>
-            <div class="preferencecard" id="preferencecard3">
+            <div class="preferencecard reveal" id="preferencecard3">
               <img src="./assets/preference3.png" alt="" draggable="false">
               <h5>We are an insured and licensed cleaning company and from beginning to end, you will have a stress free experience.</h5>
             </div>
@@ -294,7 +292,7 @@
               </div>
               <form action="https://formsubmit.co/Contact@6thavecleaning.com" method="POST" id="form">
                   <div class="formgroup1"><input type="text" required placeholder="Name" autocomplete="on" name="nome" id="name">
-                  <input type="tel" required autocomplete="on" name="tel" id="tel" placeholder="Phone" pattern=""></div>
+                  <input type="tel" required autocomplete="on" name="tel" id="tel" placeholder="Phone" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}"></div>
     
                   <div class="formgroup2"><input type="email" autocomplete="on" id="email" name="email" placeholder="Email">
                   <input type="text" required placeholder="Adress" autocomplete="on" name="Adress" id="Adress"></div>
