--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             <p>Our mission is to provide a clean and safe environment to all of our customers in a timely manner (we can do it fast accordingly to your needs) and with a fair and best price through our assessment process.</p>
           </div>
           <div class="missionborder"></div>
-          <div class="missiongrid reveal">
+          <div class="missiongrid">
             <div class="missioncard show reveal" id="missioncard1">
               <img src="./assets/mission1.jpg" alt="" draggable="false">
               <h5>Maintaining the cleanliness standards of your common areas and offices</h5>
