--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
           <img class="bgposter" src="./assets/6thavenue-landing-backgroundV2.gif" alt="" draggable="false">
             <div class="infos">
               <div class="posterimglogo"><img src="./assets/Frame29.png" alt="" draggable="false"></div>
-              <div class="infostext"><h3>Make your life <span style="font-weight:bold;">easier</span> with one less thing to worry about<span style="color:#ffbe50;">.</span></h3>
+              <div class="infostext"><h3>Make your life <span style="font-weight:bold;text-decoration:underline#ffbe50;">easier</span> with one less thing to worry about<span style="color:#ffbe50;">.</span></h3>
               <p>The best cleaning for your business spaces and homes. <span style="font-weight: bold;">Make all places cleaner, healthier and happier.</span></p></div>
               
             </div>
