underline -mob test

--- a/index.html
+++ b/index.html
@@ -116,7 +116,10 @@
           <img class="bgposter" src="./assets/6thavenue-landing-backgroundV2.gif" alt="" draggable="false">
             <div class="infos">
               <div class="posterimglogo"><img src="./assets/Frame29.png" alt="" draggable="false"></div>
-              <div class="infostext"><h3>Make your life <span style="font-weight:bold;text-decoration:underline#ffbe50;">easier</span> with one less thing to worry about<span style="color:#ffbe50;">.</span></h3>
+              <div class="infostext"><h3>Make your life <span style="font-weight:bold;"><svg width="89" height="13" viewBox="5 0 100 15" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M0 2.5C0 1.11929 1.11929 0 2.5 0H174.5C175.881 0 177 1.11929 177 2.5C177 3.88071 175.881 5 174.5 5H2.5C1.11928 5 0 3.88071 0 2.5Z" fill="#FFBE50"/>
+                </svg>
+                easier</span> with one less thing to worry about<span style="color:#ffbe50;">.</span></h3>
               <p>The best cleaning for your business spaces and homes. <span style="font-weight: bold;">Make all places cleaner, healthier and happier.</span></p></div>
               
             </div>
