--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <div class="menusocial">
                   <ul>
                     <li><a href="#request">Get in touch</a></li>
-                    <li><a href="https://www.facebook.com/6thavecleaning" target="_blank">
+                    <li><a href="https://www.facebook.com/profile.php?id=61552970386979" target="_blank">
                       <svg width="31" height="32" viewBox="0 0 31 32" fill="none" xmlns="http://www.w3.org/2000/svg">
                       <g clip-path="url(#clip0_78_44)">
                       <path d="M27.3672 0.5H3.63281C1.62968 0.5 0 2.12968 0 4.13281V27.8672C0 29.8703 1.62968 31.5 3.63281 31.5H27.3672C29.3703 31.5 31 29.8703 31 27.8672V4.13281C31 2.12968 29.3703 0.5 27.3672 0.5ZM28.5781 27.8672C28.5781 28.5349 28.0349 29.0781 27.3672 29.0781H20.4648V19.209H24.206L24.8242 15.4551H20.4648V12.8516C20.4648 11.8238 21.2535 11.0352 22.2812 11.0352H24.7637V7.28125H22.2812C19.198 7.28125 16.7123 9.77881 16.7123 12.8621V15.4551H13.0781V19.209H16.7123V29.0781H3.63281C2.9651 29.0781 2.42188 28.5349 2.42188 27.8672V4.13281C2.42188 3.4651 2.9651 2.92188 3.63281 2.92188H27.3672C28.0349 2.92188 28.5781 3.4651 28.5781 4.13281V27.8672Z" fill="white"/>
@@ -345,7 +345,7 @@
         <div class="footersocials">
           <p>Follow Us</p>
           <ul>
-            <li><a href="https://www.facebook.com/6thavecleaning" target="_blank">
+            <li><a href="https://www.facebook.com/profile.php?id=61552970386979" target="_blank">
               <svg width="38" height="38" viewBox="0 0 38 38" fill="none" xmlns="http://www.w3.org/2000/svg">
               <path d="M32.2922 0H5.69862C2.55136 0 0 2.55136 0 5.69862V32.2922C0 35.4394 2.55136 37.9908 5.69862 37.9908H32.2922C35.4394 37.9908 37.9908 35.4394 37.9908 32.2922V5.69862C37.9908 2.55136 35.4394 0 32.2922 0Z" fill="#002A68"/>
               <path d="M26.3858 24.4863L27.2317 18.9955H21.9635V15.4338C21.9635 13.935 22.698 12.4658 25.0576 12.4658H27.4543V7.79117C27.4543 7.79117 25.2802 7.42017 23.2026 7.42017C18.8619 7.42017 16.0274 10.0469 16.0274 14.8106V18.9955H11.2043V24.4863H16.0274V37.9909H21.9635V24.4863H26.3858Z" fill="white"/>
