--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link rel="icon" type="image/x-icon" href="./assets/Camada_1.png">
   <meta name="author" content="Flavia Sigoli"/>
   <meta http-equiv="content-language" content="en-US" />
-  <meta name="copyright" content="Copyright © 2023 6th Avenue" />
+  <meta name="copyright" content="Copyright © 2024 6th Avenue" />
   <meta http-equiv="content-type" content="html; charset=UTF-8" />
   <meta name="description" content="portifolio cleaning services 6th Avenue" />
   <meta name="keywords" content="portifolio, services, 6th Avenue, cleaning, cleaning services, ##">
@@ -359,7 +359,7 @@
         </div>
       </div>
 
-      <div class="rights"><p>© 2023 Melanie’s, Business Consulting. All rights reserved.</p></div>
+      <div class="rights"><p>© 2024 6th Avenue Cleaning. All rights reserved.</p></div>
     </footer>
     <script src="javascript.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-element-bundle.min.js"></script>
