--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
   <meta http-equiv="content-language" content="en-US" />
   <meta name="copyright" content="Copyright © 2024 6th Avenue" />
   <meta http-equiv="content-type" content="html; charset=UTF-8" />
-  <meta name="description" content="portifolio cleaning services 6th Avenue" />
-  <meta name="keywords" content="portifolio, services, 6th Avenue, cleaning, cleaning services, ##">
+  <meta name="description" content="portifolio cleaning service 6th Avenue" />
+  <meta name="keywords" content="portifolio, services, 6th Avenue, 6th ave, avenue, 6th, cleaning, cleaning services, ##">
   <meta name="robots" content="index, follow">
 </head>
 <body>
