--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang=”en”>
 <head>
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -294,7 +295,7 @@
                 <path d="M0.589111 1C0.589111 0.447715 1.03683 0 1.58911 0H286.411C286.963 0 287.411 0.447715 287.411 1C287.411 1.55228 286.963 2 286.411 2H1.5891C1.03682 2 0.589111 1.55228 0.589111 1Z" fill="#FFBE50"/>
                 </svg>
               </div>
-              <form action="https://formsubmit.co/Contact@6thavecleaning.com" method="POST" id="form">
+              <form action="https://formsubmit.co/contact@6thavecleaning.com" method="POST" id="form">
                   <div class="formgroup1"><input type="text" required placeholder="Name" autocomplete="on" name="nome" id="name">
                   <input type="tel" required autocomplete="on" name="tel" id="tel" placeholder="Phone"></div>
     
