--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html lang=”en”>
 <head>
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -367,3 +366,4 @@
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@8.4.7/swiper-bundle.min.js"></script>
   </body>
+  </html>
