--- a/index.html
+++ b/index.html
@@ -148,6 +148,9 @@
             </div>
           </div>
         </div>
+        <div class="videocontainer">
+          <video src="./assets/6th03192023_low.mp4" autoplay loop muted></video>
+        </div>
         <div class="diferences">
           <img src="./assets/Union.png" alt="" draggable="false">
           <div class="diferencesgrid reveal">
