--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;500;600;700;800;900&family=Urbanist:wght@400;500;600;800;900&display=swap" rel="stylesheet">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="/css/style.css">
   <title>6th Avenue</title>
   <link rel="icon" type="image/x-icon" href="./assets/Camada_1.png">
   <meta name="author" content="Flavia Sigoli"/>
@@ -66,7 +66,10 @@
   </header>
     <main>
         <div class="postercontainer">
-          <img class="bgposter" src="./assets/6thavenue-landing-backgroundV2.gif" alt="" draggable="false">
+          <div class="bgposter">
+            <video autoplay muted loop src="./assets/6th-Avenue-04232024.mp4"></video>
+          </div>
+        <!--   <img class="bgposter" src="./assets/6thavenue-landing-backgroundV2.gif" alt="" draggable="false">
             <div class="infos">
               <div class="posterimglogo"><img src="./assets/Frame29.png" alt="" draggable="false"></div>
               <div class="infostext"><h3>Make your life <span style="font-weight:bold;"><svg width="89" height="13" viewBox="5 0 100 15" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -74,7 +77,7 @@
                 </svg>
                 easier</span> with one less thing to worry about<span style="color:#ffbe50;">.</span></h3>
               <p>The best cleaning for your business spaces and homes. <span style="font-weight: bold;">Make all places cleaner, healthier and happier.</span></p></div>
-              
+               -->
             </div>
         <div class="vetor1">
           <img src="./assets/Vector19.png" alt="" draggable="false">
@@ -149,7 +152,7 @@
           </div>
         </div>
         <div class="videocontainer">
-          <video src="./assets/6th03192023_low.mp4" autoplay loop muted></video>
+          <video src="./assets/6th03192023_low.mp4" autoplay muted loop></video>
         </div>
         <div class="diferences">
           <img src="./assets/Union.png" alt="" draggable="false">
@@ -361,12 +364,10 @@
           </ul>
         </div>
       </div>
-
       <div class="rights"><p>© 2024 6th Avenue Cleaning. All rights reserved.</p></div>
     </footer>
-    <script src="javascript.js"></script>
+    <script src="/js/javascript.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-element-bundle.min.js"></script>
-
     <script src="https://cdn.jsdelivr.net/npm/swiper@8.4.7/swiper-bundle.min.js"></script>
   </body>
   </html>
