--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     <main>
         <div class="postercontainer">
           <div class="bgposter">
-            <video autoplay muted loop src="./assets/6th-Avenue-04232024.mp4"></video>
+            <video src="./assets/6th-Avenue-04232024.mp4" autoplay muted loop></video>
           </div>
         <!--   <img class="bgposter" src="./assets/6thavenue-landing-backgroundV2.gif" alt="" draggable="false">
             <div class="infos">
@@ -79,9 +79,9 @@
               <p>The best cleaning for your business spaces and homes. <span style="font-weight: bold;">Make all places cleaner, healthier and happier.</span></p></div>
                -->
             </div>
-        <div class="vetor1">
+        <!-- <div class="vetor1">
           <img src="./assets/Vector19.png" alt="" draggable="false">
-        </div>
+        </div> -->
         </div>
         <div class="missioncontainer" id="about">
           <div class="mission">
@@ -151,9 +151,9 @@
             </div>
           </div>
         </div>
-        <div class="videocontainer">
+        <!-- <div class="videocontainer">
           <video src="./assets/6th03192023_low.mp4" autoplay muted loop></video>
-        </div>
+        </div> -->
         <div class="diferences">
           <img src="./assets/Union.png" alt="" draggable="false">
           <div class="diferencesgrid reveal">
