--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     <main>
         <div class="postercontainer">
           <div class="bgposter">
-            <video src="./assets/6th-Avenue-04232024.mp4" autoplay muted loop playsinline></video>
+            <video src="./assets/6thAvenue.mp4" autoplay muted loop playsinline></video>
           </div>
         <!--   <img class="bgposter" src="./assets/6thavenue-landing-backgroundV2.gif" alt="" draggable="false">
             <div class="infos">
