--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <head>
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;500;600;700;800;900&family=Urbanist:wght@400;500;600;800;900&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;500;600;700;800;900&family=Urbanist:wght@400;500;600;800;900&display=swap" rel="stylesheet">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="/css/style.css">
   <title>6th Avenue</title>
@@ -300,7 +300,7 @@
                 <path d="M0.589111 1C0.589111 0.447715 1.03683 0 1.58911 0H286.411C286.963 0 287.411 0.447715 287.411 1C287.411 1.55228 286.963 2 286.411 2H1.5891C1.03682 2 0.589111 1.55228 0.589111 1Z" fill="#FFBE50"/>
                 </svg>
               </div>
-              <form action="https://airform.io/contact@6thavecleaning.com" method="POST" id="form">
+              <form action="https://formspree.io/f/xvgpgbyl" method="POST" id="form">
                   <div class="formgroup1"><input type="text" required placeholder="Name" autocomplete="on" name="nome" id="name">
                   <input type="tel" required autocomplete="on" name="tel" id="tel" placeholder="Phone"></div>
     
