test list area mobile

--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
           </div>
           <div class="missionborder"></div>
           <div class="missiongrid">
-            <img src="./assets/6thave-time.png" alt="" class="time">
+            <img src="./assets/6thave-time.png" alt="" class="time reveal">
             <div class="missioncards">
               <div class="missioncard show reveal" id="missioncard1">
                 <img src="./assets/mission11.png" alt="" draggable="false">
@@ -209,7 +209,8 @@
         </div> -->
         <div class="diferences">
           <!-- <img src="./assets/Union.png" alt="" draggable="false"> -->
-           <video src=""></video>
+           <div class="videoimgdif">
+           <video class="" src="./assets/6th-substituicao.mp4" autoplay muted loop playsinline></video></div>
           <div class="diferencesgrid reveal">
             <div class="diferencecard">
               <svg xmlns="http://www.w3.org/2000/svg" width="171" height="168" viewBox="0 0 171 168" fill="none">
